--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express-validator": "^6.14.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.4",
+    "multer": "^1.4.4",
     "shortid": "^2.2.16"
   },
   "devDependencies": {
