--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Individual proyect make it real",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon './index.js",
-    "start": "node './index.js"
+    "dev": "nodemon index.js",
+    "start": "node index.js"
   },
   "keywords": [
     "sendme",
